crates/figue/tests/integration/snapshots/main__integration__deser_errors__deser_error_file_wrong_type_for_port.snap
---
source: crates/figue/tests/integration/deser_errors.rs
expression: "$crate :: common :: strip_ansi(& report.to_string())"
---
Error: failed to parse "not_a_number" as u16 at config.port
   ╭─[ config.json:4:5 ]
   │
 4 │     }
   │     ┬  
   │     ╰── failed to parse "not_a_number" as u16 at config.port
───╯
